# NutEV-Evidence-Engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .grype.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Iniciar-NutEV-Windows.bat  MANIFEST.in  NOTICE.md  README.md  README_NUTEV.md  README_old.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start-nutev.bat  start-nutev.command
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY_ALERTS.md  dependabot.yml  release.yml
.pre-commit-hooks/: check-css-class-prefix.py  check-deprecated-settings-wrapper.py  check-settings-manager-thread-safety.py  check-version-sync.py
changelog.d/: +context-overflow-link-wires.feature.md  3670.breaking.1.md  3670.breaking.md  3670.feature.md  3773.feature.md  README.md
community_benchmark_results/: README.md
config/: article1_scope.json  audit_rules.json  domain_rules_busca1.json  domain_rules_busca2a.json  domain_rules_busca2b.json  evidence_lenses.json  evidence_quality_rules.json  global_watch_sources.json  keyword_taxonomy.json  keyword_taxonomy_overlay.json  keyword_taxonomy_overrides.json  keyword_taxonomy_supplement.json  keyword_taxonomy_supplement_20260617_food_access.json  keyword_taxonomy_supplement_20260619_nutrition_prescription.json  keyword_taxonomy_supplement_20260623_dietary_remission.json  keyword_taxonomy_supplement_20260624_behavioral_nutrition.json  keyword_taxonomy_supplement_20260624_culinary_coaching.json  keyword_taxonomy_supplement_20260630_glp1_nutrition.json  keyword_taxonomy_supplement_202606_ckm.json  keyword_taxonomy_supplement_20260701_food_skills.json  keyword_taxonomy_supplement_20260702_food_access.json  keyword_taxonomy_supplement_20260711_personalized_metabolic.json  keyword_taxonomy_supplement_20260713_preference_sensitive_nutrition.json  keyword_taxonomy_supplement_2026_06_adherence_self_efficacy.json  keyword_taxonomy_supplement_2026_06_adiposity_remission.json  keyword_taxonomy_supplement_2026_06_cardiometabolic_liver_precision.json  keyword_taxonomy_supplement_2026_06_community_referral.json  keyword_taxonomy_supplement_2026_06_food_access.json  keyword_taxonomy_supplement_2026_06_food_skills.json  keyword_taxonomy_supplement_2026_06_instruments.json  keyword_taxonomy_supplement_2026_06_lipid_precision.json  keyword_taxonomy_supplement_2026_06_social_prescribing.json  keyword_taxonomy_supplement_2026_07_central_adiposity.json  keyword_taxonomy_supplement_2026_07_group_visit_delivery.json  keyword_taxonomy_supplement_2026_07_personalized_nutrition.json  keyword_taxonomy_supplement_a3_food_competence.json  keyword_taxonomy_supplement_a3_food_skills.json  keyword_taxonomy_supplement_a3_instruments.json  keyword_taxonomy_supplement_access_barriers.json  keyword_taxonomy_supplement_access_navigation.json  (+295 more)
constraints/: windows.txt
docs/: ADHERENCE_QUESTIONNAIRE_DEVELOPMENT_PLAN.md  AI_USE_AND_HUMAN_OVERSIGHT.md  ARTICLE1_CANONICAL_PROTOCOL.md  ARTICLE1_DOMAIN_CODING.md  ARTICLE3_ANALYTICAL_BEHAVIORAL_FRAMEWORK.md  ARTICLE3_EVIDENCE_INTEGRATION_MATRIX.md  AUDITORIA_CRUZADA_DRIVE_GITHUB_ARTIGO1.md  AUDITORIA_PEGAR_TUDO.md  CHANGELOG_METODOLOGICO.md  CI_CD_INFRASTRUCTURE.md  CLEANUP_REPORT.md  CODE_AVAILABILITY.md  CONFIGURATION.md  COPYRIGHT_AND_FULL_TEXT_POLICY.md  DATA_GOVERNANCE.md  DEPENDENCY_ARCHITECTURE.md  GITHUB_PUBLIC_SETTINGS_CHECKLIST.md  GREY_LITERATURE_POLICY.md  GUIAS_OCR_CLASSIFICACAO.md  LEGACY_CLEANUP_AUDIT.md  LEGACY_DEPENDENCY_MAP.md  LEGACY_MIGRATION_PLAN.md  NUTEV_AUDIT_ENGINE.md  NUTEV_CONCEPTUAL_HIERARCHY.md  NUTEV_CONTROL_CENTER.md  NUTEV_EVIDENCE_QUALITY_APPRAISAL_PLAN.md  NUTEV_EVIDENCE_TO_PROTOCOL_FLOW.md  NUTEV_HUMAN_CURATION_CHECKLIST.md  NUTEV_METHODOLOGICAL_RISKS_SAFEGUARDS.md  NUTEV_PILOT_REAL_PROTOCOL.md  NUTEV_PLATFORM_API.md  NUTEV_PREMIUM_UI_GUIDE.md  NUTEV_PROVIDER_SETTINGS.md  NUTEV_REAL_RUN_READINESS_AND_LIMITATIONS.md  OCR_SETUP.md  PILOT_AUDIT_RESPONSE.md  PROMPT_OTIMIZACAO.md  PUBLIC_RELEASE_AUDIT.md  PUBLIC_REPOSITORY_HYGIENE.md  PUBMED_TROUBLESHOOTING.md  (+24 more)
examples/: picos.json
nutev_tests/: conftest.py  test_adherence_behavior_extensions.py  test_adherence_engagement_extensions.py  test_adherence_maintenance_extensions.py  test_adherence_persistence_expansion.py  test_adherence_self_regulation_supplement.py  test_adiposity_clinical_terms.py  test_anti_obesity_nutrition_expansion.py  test_api_monitor.py  test_article1_api.py  test_article1_coding.py  test_article1_exports.py  test_article1_reports.py  test_artifact_manifest.py  test_arxiv.py  test_ask.py  test_audit_artifacts_runtime.py  test_audit_claims_path_contract.py  test_audit_robustness_fixes.py  test_behavior_change_expansion.py  test_behavior_change_model_query_terms.py  test_behavior_change_planning_semantics.py  test_behavior_framework_priority.py  test_behavior_maintenance_extensions.py  test_behavior_support_scoring.py  test_behavioural_variant_extensions.py  test_body_composition_query_extension.py  test_busca2b_semantic_guardrails.py  test_carbohydrate_quality_extensions.py  test_cardiometabolic_adiposity_supplements.py  test_cardiometabolic_diet_pattern_extensions.py  test_cardiometabolic_kidney_metabolic_terms.py  test_cardiometabolic_multimorbidity_query_expansion.py  test_cardiometabolic_remission_terms.py  test_cardiorenal_ckm_expansion.py  test_cardiorenal_querypack_extension.py  test_cardiorenal_scoring_supplement.py  test_cardiovascular_health_query_extensions.py  test_checkpoint.py  test_checkpoint_resume.py  (+434 more)
packaging/: nutev.spec  nutev_app.py
requirements/: nutev-ci.txt  nutev-core.txt
scripts/: check_local.py  close_stale_prs.sh  create_shortcut_macos.command  create_shortcut_windows.ps1  diagnose_recoverability.py  generate_config_docs.py  ldr-diff-research.py  run_api_windows.ps1  run_dashboard_unix.sh  run_dashboard_windows.ps1  run_local_unix.sh  run_local_windows.ps1  setup_unix.sh  setup_windows.ps1
src/: sitecustomize.py  usercustomize.py
tests/: conftest.py  package-lock.json  test_followup_api.py  (+6 more)
(+1157 files in other folders)
