[build-system]
requires = ["pdm-backend>=2.4.3"]
build-backend = "pdm.backend"

[project]
name = "nutev-nutmev"
dynamic = ["version"]
description = "NutEV/NutMEV reproducible evidence engine for lifestyle nutrition research and candidate protocol recommendations"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {file = "LICENSE"}
authors = [
    {name = "NutEV/NutMEV Project"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Core runtime only. nutev imports exactly these to run the pipeline, CLI,
    # knowledge base and evidence tables (bs4 uses the stdlib html.parser; the
    # OpenAI ask backend uses stdlib urllib). Heavy LLM/UI/OCR/semantic features
    # live in the extras below and are imported lazily, degrading gracefully
    # when absent. Mirrors requirements/nutev-ci.txt — the set the suite runs on.
    "requests>=2.32",
    "pandas~=3.0",
    "pydantic~=2.12",
    "beautifulsoup4~=4.14",
    "defusedxml~=0.7",
    "openpyxl~=3.1",
    "pypdf~=6.10.1",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]~=1.2",
]
dashboard = [
    # Streamlit dashboard (`nutev dashboard`). pandas/openpyxl are core.
    "streamlit",
]
platform = [
    # FastAPI service (`nutev serve` / `nutev platform`).
    "fastapi",
    "uvicorn",
    "jinja2",
    # Word (.docx) export for the dissertation report (best-effort, lazily imported).
    "python-docx~=1.1",
]
# Heavy/optional features. The default `pip install` stays lean; install an
# extra only for the capability you need. All are lazily imported and degrade
# gracefully when absent.
semantic = [
    # Embeddings-based retrieval for `nutev ask` (pulls torch). Falls back to
    # deterministic TF-IDF keyword retrieval when not installed.
    "sentence-transformers~=5.2",
    "faiss-cpu~=1.13",
]
kb = [
    # Parquet export of the knowledge base (corpus.parquet). JSONL/CSV always work.
    "pyarrow~=23.0",
]
ocr = [
    # Scanned-PDF / image full-text extraction fallbacks (extract/). Optional:
    # text-layer PDFs and HTML are handled by the core. Needs the system
    # `tesseract` and `poppler` binaries for pytesseract / pdf2image.
    "Pillow>=12.1.1",
    "pdf2image~=1.17",
    "pytesseract~=0.3",
    "python-docx~=1.1",
]
llm = [
    # Anthropic backend for `nutev ask`. The OpenAI backend needs only an API
    # key (stdlib urllib); offline TF-IDF retrieval needs nothing extra.
    "langchain-anthropic~=1.3",
]
all = [
    "nutev-nutmev[semantic,kb,ocr,llm,dashboard,platform]",
]

[project.urls]
"Homepage" = "https://github.com/WillianVagner123/NUT-MEV_NEW"
"Bug Tracker" = "https://github.com/WillianVagner123/NUT-MEV_NEW/issues"
"Validation Report" = "https://github.com/WillianVagner123/NUT-MEV_NEW/blob/main/docs/VALIDATION_REPORT.md"

[project.scripts]
nutev = "nutev.cli:main"

[tool.pdm]
distribution = true
version = { source = "file", path = "src/nutev/__init__.py" }

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cpu"
name = "torch"
include_packages = ["torch", "torch*"]

[tool.pdm.resolution.overrides]
requests = ">=2.33"
lxml = ">=6.0"

[dependency-groups]
dev = [
    "virtualenv~=20.36",
    "pre-commit~=4.5",
    "cookiecutter~=2.6",
    "pytest-mock~=3.15",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-timeout~=2.4",
    "pytest-asyncio~=1.3",
    "pytest-xdist~=3.8",
    "ruff~=0.15",
    "freezegun~=1.5",
    "mypy~=1.19",
    "types-requests~=2.32",
    "types-toml~=0.10",
    "types-flask~=1.1",
    "hypothesis~=6.151",
    "vulture~=2.14",
    "towncrier~=24.8",
]

[tool.pytest.ini_options]
testpaths = ["nutev_tests"]
markers = [
    "requires_llm: marks tests that require a real LLM (not fallback)",
    "integration: marks integration tests",
    "slow: marks slow tests",
    "asyncio: marks async tests that use asyncio",
]
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/strategies/*",
    "*/cli.py",
    "*/cli/*",
    "*/visualization.py",
    "*/answer_decoding/*",
]
