[build-system]
requires = ["pdm-backend>=2.4.3"]
build-backend = "pdm.backend"

[project]
name = "nutev-nutmev"
dynamic = ["version"]
description = "NutEV/NutMEV reproducible evidence engine for lifestyle nutrition research and candidate protocol recommendations"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = {file = "LICENSE"}
authors = [
    {name = "NutEV/NutMEV Project"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
# ---------------------------------------------------------------------------
# CORE dependencies — the minimum required to import `nutev`, parse config,
# generate demo data, run a basic bibliographic search and read/write tabular
# outputs. Deliberately excludes Flask, the frontend, Elasticsearch, FAISS,
# Playwright, SQLCipher and the LangChain ecosystem (all optional below).
# Rationale for each is documented in docs/DEPENDENCY_ARCHITECTURE.md.
# ---------------------------------------------------------------------------
dependencies = [
    "pandas~=3.0",            # tabular pipelines/exports/demo (analysis, export, audit, protocol, review, pipelines)
    "pydantic~=2.12",         # typed engine/audit/api models
    "requests>=2.32",         # HTTP client for bibliographic search and downloads
    "beautifulsoup4~=4.14",   # HTML parsing in search/global_watch/download
    "python-dateutil~=2.9",   # robust parsing of publication dates
    "openpyxl~=3.1",          # .xlsx export tables (export/extract)
    "typing-extensions~=4.15",# typing backports used across the core
]

[project.optional-dependencies]
# Optional bibliographic search providers (basic HTTP search works with core).
search = [
    "arxiv~=2.4",                  # arXiv metadata client
    "wikipedia~=1.4",              # Wikipedia summaries
    "google-search-results~=2.4",  # SerpAPI (OPTIONAL — Google/SerpAPI not required)
    "lxml>=5.3",                   # faster HTML/XML parsing
    "xmltodict~=1.0",              # PubMed / NCBI E-utilities XML
]
# Document ingestion / OCR / PDF text extraction (heavy, system deps: tesseract, poppler).
documents = [
    "pypdf~=6.10.1",
    "pdfplumber~=0.11",
    "pdf2image~=1.17",
    "pytesseract~=0.3",
    "python-docx~=1.1",
    "Pillow>=12.1.1",
]
# Streamlit review dashboard.
dashboard = [
    "streamlit",
    "pandas~=3.0",
    "openpyxl~=3.1",
    "plotly~=6.5",
]
# FastAPI platform / REST API.
api = [
    "fastapi",
    "uvicorn",
    "pydantic~=2.12",
    "jinja2",
]
# Alias kept so the CLI hint `pip install -e ".[platform]"` keeps working.
platform = [
    "nutev-nutmev[api]",
]
# Optional LLM providers — NutEV runs without any LLM. Nothing here is required
# to produce RecommendationCandidates; the LLM assists, it never approves.
llm = [
    "langchain~=1.2",
    "langchain-community~=0.4",
    "langchain-core~=1.2",
    "langchain-openai~=1.1",
    "langchain-anthropic~=1.3",
    "langchain-ollama~=1.0",
    "tiktoken~=0.12",
]
# Global Watch browser capture and scheduling.
watch = [
    "playwright~=1.58",
    "apscheduler~=3.11",
    "aiohttp~=3.13",
    "tenacity~=9.1",
]
mcp = [
    "mcp[cli]~=1.2",
]
# Development / test tooling (also available as the pdm `dev` group).
dev = [
    "virtualenv~=20.36",
    "pre-commit~=4.5",
    "cookiecutter~=2.6",
    "pytest~=9.0",
    "pytest-mock~=3.15",
    "pytest-cov~=7.0",
    "pytest-timeout~=2.4",
    "pytest-asyncio~=1.3",
    "pytest-xdist~=3.8",
    "ruff~=0.15",
    "freezegun~=1.5",
    "mypy~=1.19",
    "types-requests~=2.32",
    "types-toml~=0.10",
    "types-flask~=1.1",
    "hypothesis~=6.151",
    "vulture~=2.14",
    "towncrier~=24.8",
]
# Everything (all NutEV optional groups). The inherited local_deep_research
# engine and its `legacy` extra were removed from the tree; see NOTICE.md and
# docs/LEGACY_MIGRATION_PLAN.md.
all = [
    "nutev-nutmev[search,documents,dashboard,api,llm,watch,mcp]",
]

[project.urls]
"Homepage" = "https://github.com/WillianVagner123/NUT-MEV_NEW"
"Bug Tracker" = "https://github.com/WillianVagner123/NUT-MEV_NEW/issues"
"Validation Report" = "https://github.com/WillianVagner123/NUT-MEV_NEW/blob/main/docs/VALIDATION_REPORT.md"

[project.scripts]
# Canonical NutEV/NutMEV entrypoint — the only console script. The inherited
# local_deep_research engine (and its ldr/ldr-web/ldr-mcp scripts) was removed
# from the tree; see NOTICE.md and docs/LEGACY_MIGRATION_PLAN.md.
nutev = "nutev.cli:main"

# Build backend is pdm.backend (see [build-system]); the setuptools section is a
# fallback for editable installs via `pip install -e .`.
[tool.setuptools]
include-package-data = true

[tool.pdm]
distribution = true
# Version is sourced from the canonical NutEV package.
version = { source = "file", path = "src/nutev/__version__.py" }

[tool.pdm.resolution.overrides]
requests = ">=2.33"
lxml = ">=6.0"

# Dev tooling now lives in [project.optional-dependencies].dev above so that
# `pip install -e ".[dev]"` works for external contributors without pdm.

[tool.pytest.ini_options]
# Canonical test location is nutev_tests/ (the legacy tests/ tree is not part
# of the canonical suite — see docs/LEGACY_MIGRATION_PLAN.md).
testpaths = ["nutev_tests"]
markers = [
    # Canonical NutEV test groups.
    "unit: fast, isolated unit tests (default group)",
    "contracts: schema/contract tests (artifact and metadata contracts)",
    "integration_no_network: integration tests that must NOT touch the network",
    "integration_network: integration tests that require network access",
    "slow: slow tests",
    "llm: tests that require a real LLM (paid/hosted) — excluded from default CI",
    "dashboard: tests for the Streamlit dashboard",
    "api: tests for the FastAPI platform",
    "global_watch: tests for the Global Watch pipeline",
    # Backwards-compatible aliases.
    "requires_llm: (alias of llm) tests requiring a real LLM",
    "integration: (broad) integration tests",
    "asyncio: async tests that use asyncio",
]
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/strategies/*",
    "*/cli.py",
    "*/cli/*",
    "*/visualization.py",
    "*/answer_decoding/*",
]
